# geode-native

./: CMakeLists.txt  conanfile.py
ccache/: CMakeLists.txt  ccache.cpp
ccache/include/: ccache.h
ccache/test/: CMakeLists.txt  test.c
ci/base/: base.yml  pipeline.yml  pipeline_abi.yml
ci/docker/abi-compliance-checker/: Dockerfile
ci/docker/abi-dumper/: Dockerfile
ci/docker/abi-tools/: Dockerfile
ci/docker/abigail-tools/: Dockerfile
ci/lib/: templates.lib.txt  templates.lib.yml
ci/release/: pipeline.yml
clicache/: .clang-format  CMakeLists.txt
clicache/integration-test/: CMakeLists.txt  CacheHelperN.cs  CacheServerMsgs.cs  ExpirationTestsN.cs  OverflowTestsN.cs  PutGetPerfTests.cs  RegionEntryTests.cs  SerializationTestsN.cs  ThinClientAppDomainFunctionExecutionTests.cs  ThinClientAppDomainQueryTests.cs  ThinClientCqIRTestsN.cs  ThinClientCqTestsN.cs  ThinClientDeltaTestN.cs  ThinClientDurableCqTestsN.cs  ThinClientDurableTestsN.cs  ThinClientPdxTests.cs  ThinClientPoolTestsN.cs  ThinClientQueryTestsN.cs  ThinClientRegionInterestFailoverInterest2Tests.cs  ThinClientRegionInterestFailoverInterestTests.cs  ThinClientRegionInterestFailoverRegexInterestTests.cs  ThinClientRegionInterestList2Tests.cs  ThinClientRegionInterestListTests.cs  ThinClientRegionInterestListWithPdxTests.cs  ThinClientRegionInterestNotifyTests.cs  ThinClientRegionInterestRegexInterest2Tests.cs  ThinClientRegionInterestRegexInterest3Tests.cs  ThinClientRegionInterestRegexInterestTests.cs  ThinClientRegionInterestResultPolicyInvTests.cs  ThinClientRegionQueryTests.cs  ThinClientRegionTestsN.cs  ThinClientRemoteParamQueryResultSetTests.cs  ThinClientRemoteParamQueryStructSetTests.cs  ThinClientRemoteQueryExclusivenessTests.cs  ThinClientRemoteQueryFailoverTests.cs  ThinClientRemoteQueryResultSetTests.cs  ThinClientRemoteQueryStructSetTests.cs  ThinClientSecurityAuthzTestsMUN.cs  ThinClientSecurityAuthzTestsN.cs  ThinClientStatisticTestsN.cs  (+5 more)
clicache/integration-test2/: CMakeLists.txt  PositionKey.cs
clicache/src/: AttributesMutator.cpp  AttributesMutator.hpp  CMakeLists.txt  Cache.cpp  Cache.hpp  CacheFactory.cpp  CacheFactory.hpp  CacheListenerAdapter.hpp  CacheStatistics.cpp  CacheStatistics.hpp  CacheTransactionManager.cpp  CacheTransactionManager.hpp  CacheWriterAdapter.hpp  CacheableArrayList.hpp  CacheableBuiltins.hpp  CacheableDate.cpp  CacheableDate.hpp  CacheableFileName.cpp  CacheableFileName.hpp  CacheableHashMap.cpp  CacheableHashMap.hpp  CacheableHashSet.hpp  CacheableHashTable.hpp  CacheableIdentityHashMap.hpp  CacheableKey.cpp  CacheableKey.hpp  CacheableLinkedList.hpp  CacheableObject.cpp  CacheableObject.hpp  CacheableObjectArray.cpp  CacheableObjectArray.hpp  CacheableObjectXml.cpp  CacheableObjectXml.hpp  CacheableStack.cpp  CacheableStack.hpp  CacheableString.cpp  CacheableString.hpp  CacheableStringArray.cpp  CacheableStringArray.hpp  CacheableUndefined.cpp  (+141 more)
clicache/src/impl/: AppDomainContext.cpp  AppDomainContext.hpp  AssemblyInfo.cpp.in  AuthenticatedView.cpp  AuthenticatedView.hpp  CacheListener.hpp  CacheLoader.hpp  CacheResolver.cpp  CacheResolver.hpp  CacheWriter.hpp  CliCallbackDelgate.cpp  CliCallbackDelgate.hpp  CqListenerProxy.hpp  CqStatusListenerProxy.hpp  DelegateWrapper.hpp  DotNetTypes.hpp  EnumInfo.cpp  EnumInfo.hpp  FixedPartitionResolver.hpp  GeodeDataInputStream.hpp  GeodeDataOutputStream.hpp  GeodeNullStream.hpp  ManagedAuthInitialize.cpp  (+68 more)
clicache/test/: TimeUtilsTests.cpp  native_conditional_unqiue_ptrTests.cpp  native_shared_ptrTests.cpp  native_unique_ptrTests.cpp
clicache/test2/: CMakeLists.txt  ObjectsTests.cs
cmake/: ClangFormat.cmake  NUnit.cmake  NUnitAddTests.cmake
cppcache/: CMakeLists.txt
cppcache/benchmark/: CMakeLists.txt  DataOutputBM.cpp  GeodeHashBM.cpp  GeodeLoggingBM.cpp  util.hpp
cppcache/integration-test/: BBNamingContext.cpp  BuiltinCacheableWrappers.hpp  CMakeLists.txt  CacheHelper.cpp  DeltaEx.hpp  LocatorHelper.hpp  ThinClientHelper.hpp  ThinClientSecurityHelper.hpp  fw_dunit.cpp  fw_dunit.hpp  fw_helper.hpp  test.bat.in  test.sh.in  testExpiration.cpp  testLogger.cpp  testOverflowPutGetSqLite.cpp  testSerialization.cpp  testThinClientCqDelta.cpp  testThinClientDeltaWithNotification.cpp  testThinClientLRUExpiration.cpp  testThinClientPdxDeltaWithNotification.cpp  testThinClientRemoteQueryRS.cpp  testThinClientRemoteQuerySS.cpp  testUtils.hpp
cppcache/shared/: CMakeLists.txt
cppcache/src/: AdminRegion.cpp  AdminRegion.hpp  Assert.cpp  Assert.hpp  AttributesFactory.cpp  AttributesMutator.cpp  CMakeLists.txt  Cache.cpp  CacheAttributes.cpp  CacheConfig.cpp  CacheConfig.hpp  CacheFactory.cpp  CacheImpl.cpp  CacheImpl.hpp  CacheListener.cpp  CacheLoader.cpp  CacheRegionHelper.cpp  CacheRegionHelper.hpp  CacheTransactionManagerImpl.cpp  CacheTransactionManagerImpl.hpp  CacheWriter.cpp  CacheXml.hpp  CacheXmlCreation.cpp  CacheXmlCreation.hpp  CacheXmlParser.cpp  CacheXmlParser.hpp  CacheableBuiltins.cpp  CacheableDate.cpp  CacheableEnum.cpp  CacheableFileName.cpp  CacheableObjectArray.cpp  CacheableObjectPartList.cpp  CacheableObjectPartList.hpp  CacheableString.cpp  CacheableToken.cpp  CacheableToken.hpp  CacheableUndefined.cpp  ClientConnectionRequest.cpp  ClientConnectionRequest.hpp  ClientConnectionResponse.cpp  (+297 more)
cppcache/test/: ByteArrayFixture.cpp  CMakeLists.txt  CacheableStringEqualityTest.cpp  CacheableStringTests.cpp  ClientProxyMembershipIDTest.cpp  DataInputTest.cpp  LRUQueueTest.cpp  LoggingTest.cpp  PdxInstanceImplTest.cpp  PlainSocketTest.cpp  SimpleProxySocketTest.cpp  SslSocketTest.cpp  TcrMessage_unittest.cpp  TimerQueue.cpp  TimerQueue.hpp  TimerQueueTest.cpp  UtilsTest.cpp  hashTest.cpp
cryptoimpl/: SSLImpl.hpp
dependencies/: CMakeLists.txt
dependencies/ACE/: CMakeLists.txt
dependencies/benchmark/: CMakeLists.txt
dependencies/boost/: CMakeLists.txt
dependencies/gtest/: CMakeLists.txt
dependencies/sqlite/: CMakeLists.txt
sqliteimpl/: CMakeLists.txt  SqLiteHelper.cpp  SqLiteImpl.cpp  SqLiteImpl.hpp
templates/security/: PkcsAuthInit.cpp
tests/cli/: CMakeLists.txt
(+155 files in other folders)
